ho inserito nell'HTML tutto l'occorrente per creare la mini calcolatrice (input per inserire i due numeri + le operazioni che si vogliono fare)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
 
 
+    <button id="somma">Somma</button>
+    <button id="differenza">Differenza</button>
+    <button id="moltiplicazione">Moltiplicazione</button>
+    <button id="divisione">Divisione</button>
+
+    <h2>Risultato:</h2>
+    <p id="risultato">---</p>
+
+
     <script src="js/script.js"></script>
 </body>
 
